# DanmakuGame

./: main.cpp  meson.build
NodePlan/: 66消-系统.rnote  66消.md  README.md  Structure.canvas
NodePlan/NodePlan/: Bullet.md  Character.md  DialogBox 1.md  Enemy.md  Item.md  Node.md  Object.md  Player.md  Real.md
include/: Character.h  Danmaku.h  Item.h  Object.h  Player.h  Real.h
src/: Box.cpp  CoordinateSystem.cpp  Point.cpp
src/Paces/: directlyDrop.cpp  paceHead.h
